@@ -23,7 +23,7 @@ repository.web = https://github.com/abraxxa/Test-Portability-Files
 
 
 [Prereqs]
-perl = 5.006
+perl = 5.008
 File::Basename = 0
 File::Find = 0
 File::Spec = 0
